<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <View
        android:id="@+id/main_rec"
        android:layout_width="294dp"
        android:layout_height="510dp"
        android:background="@drawable/main_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textStyle="italic"
        android:textColor="@color/dark_malina"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/main_edit"
        app:layout_constraintEnd_toEndOf="@+id/main_rec"
        app:layout_constraintStart_toStartOf="@+id/main_rec"
        app:layout_constraintTop_toBottomOf="@+id/main_welcome" />

    <TextView
        android:id="@+id/main_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/dark_malina"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_rec"
        app:layout_constraintEnd_toEndOf="@+id/main_rec"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/main_rec"
        app:layout_constraintTop_toTopOf="@+id/main_rec"
        app:layout_constraintVertical_bias="0.124" />

    <EditText
        android:id="@+id/main_edit"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_name"
        app:layout_constraintBottom_toBottomOf="@id/main_rec"
        app:layout_constraintEnd_toEndOf="@id/main_rec"
        app:layout_constraintStart_toStartOf="@id/main_rec"
        app:layout_constraintTop_toTopOf="@id/main_rec"
        android:inputType="text"/>


    <EditText
        android:id="@+id/main_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/main_button"
        app:layout_constraintEnd_toEndOf="@+id/main_edit"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/main_edit"
        app:layout_constraintTop_toBottomOf="@+id/main_edit"
        app:layout_constraintVertical_bias="0.254" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/dark_malina"

        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="@id/main_rec"
        app:layout_constraintEnd_toEndOf="@id/main_rec"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@id/main_rec"
        app:layout_constraintTop_toTopOf="@id/main_rec"
        app:layout_constraintVertical_bias="0.835"

        />


</androidx.constraintlayout.widget.ConstraintLayout>